--- a/consumer.css
+++ b/consumer.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 body {
-    background-image: url('assets/consumer_background.jpg');
     width: 100%;
     height: 100%;
     margin: 0;
@@ -50,7 +49,13 @@ body {
         transform: rotate(-20deg) translate3d(-50%, 0, 0);
     }
 }
-.content #shameless_product_placement_logo {
+.content #blurrable_section #consumer_background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: scale(1.1);
+}
+.content #blurrable_section #shameless_product_placement_logo {
     position: absolute;
     height: auto;
     width: 15%;
@@ -58,22 +63,22 @@ body {
     right: 3%;
     transition: 250ms linear;
 }
-.content #shameless_product_placement_logo:hover {
+.content #blurrable_section #shameless_product_placement_logo:hover {
     filter: brightness(75%);
     transition: 250ms linear;
 }
-.content #shih_zoo_merchandise {
+.content #blurrable_section #shih_zoo_merchandise {
     position: absolute;
     width: 8%;
     top: 2%;
     left: 14%;
     transition: filter 250ms linear;
 }
-.content #shih_zoo_merchandise:hover {
+.content #blurrable_section #shih_zoo_merchandise:hover {
     filter: brightness(75%);
     transition: filter 250ms linear;
 }
-.content #shih_tzu {
+.content #blurrable_section #shih_tzu {
     height: auto;
     width: 0.7%;
     opacity: 0;
@@ -98,7 +103,7 @@ body {
         opacity: 1;
     }
 }
-.content #shih_zoo_logo {
+.content #blurrable_section #shih_zoo_logo {
     position: absolute;
     height: auto;    
     width: 20%;
@@ -106,11 +111,11 @@ body {
     bottom: 22%;
     transition: 250ms transform linear;
 }
-.content #shih_zoo_logo:hover {
+.content #blurrable_section #shih_zoo_logo:hover {
     transform: translate(0px, -10px);
     transition: 250ms transform linear;
 }
-.content #shih_zoo_download_button {
+.content #blurrable_section #shih_zoo_download_button {
     height: 60px;
     transition: 250ms;
     position: absolute;
@@ -135,12 +140,12 @@ body {
     filter: drop-shadow(0 5px);
     transition: transform filter 250ms;
 }
-.content #shih_zoo_download_button:hover {
+.content #blurrable_section #shih_zoo_download_button:hover {
     transition: transform filter 250ms linear;
     transform: translate(0px, 5px);
     filter: drop-shadow(0 0);
 }
-.content #les_dudes_coming_soon {
+.content #blurrable_section #les_dudes_coming_soon {
     position: absolute;
     height: auto;
     width: 20%;
@@ -148,23 +153,23 @@ body {
     bottom: 20%;
     transition: filter 250ms linear;
 }
-.content #les_dudes_coming_soon:hover {
+.content #blurrable_section #les_dudes_coming_soon:hover {
     filter: brightness(75%);
     transition: filter 250ms linear;
 }
-.content .consumer_social_media {
+.content #blurrable_section .consumer_social_media {
     position: absolute;
     bottom: 1%;
     right: 1%;
 }
-.content .consumer_social_media .consumer_social_media_icons {
+.content #blurrable_section .consumer_social_media .consumer_social_media_icons {
     display: inline;
     color: white;
     font-size: 3vw;
     text-decoration: none;
     transition: 250ms linear;
 }
-.content .consumer_social_media .consumer_social_media_icons:hover {
+.content #blurrable_section .consumer_social_media .consumer_social_media_icons:hover {
     transition: 250ms linear;
     filter: brightness(50%);
 }
@@ -273,7 +278,13 @@ body {
             transform: rotate(-20deg) translate3d(-50%, 0, 0);
         }
     }
-    .content #shameless_product_placement_logo {
+    .content #blurrable_section #consumer_background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform: scale(1.1);
+    }
+    .content #blurrable_section #shameless_product_placement_logo {
         position: absolute;
         height: auto;
         width: 40%;
@@ -281,24 +292,24 @@ body {
         right: 3%;
         transition: 250ms linear;
     }
-    .content #shameless_product_placement_logo:hover {
+    .content #blurrable_section #shameless_product_placement_logo:hover {
         filter: brightness(75%);
         transition: 250ms linear;
     }
-    .content #shih_zoo_merchandise {
+    .content #blurrable_section #shih_zoo_merchandise {
         position: absolute;
         width: 15%;
         top: 2%;
         left: 14%;
         transition: filter 250ms linear;
     }
-    .content #shih_zoo_merchandise:hover {
+    .content #blurrable_section #shih_zoo_merchandise:hover {
         filter: brightness(75%);
         transition: filter 250ms linear;
     }
-    .content #shih_tzu {
+    .content #blurrable_section #shih_tzu {
         height: auto;
-        width: 2%;
+        width: 1.25%;
         opacity: 0;
         position: absolute;
         margin: auto;
@@ -321,7 +332,7 @@ body {
             opacity: 1;
         }
     }
-    .content #shih_zoo_logo {
+    .content #blurrable_section #shih_zoo_logo {
         position: absolute;
         height: auto;    
         width: 30%;
@@ -329,11 +340,11 @@ body {
         bottom: 22%;
         transition: 250ms transform linear;
     }
-    .content #shih_zoo_logo:hover {
+    .content #blurrable_section #shih_zoo_logo:hover {
         transform: translate(0px, -10px);
         transition: 250ms transform linear;
     }
-    .content #shih_zoo_download_button {
+    .content #blurrable_section #shih_zoo_download_button {
         height: 60px;
         transition: 250ms;
         position: absolute;
@@ -358,12 +369,12 @@ body {
         filter: drop-shadow(0 5px);
         transition: transform filter 250ms;
     }
-    .content #shih_zoo_download_button:hover {
+    .content #blurrable_section #shih_zoo_download_button:hover {
         transition: transform filter 250ms linear;
         transform: translate(0px, 5px);
         filter: drop-shadow(0 0);
     }
-    .content #les_dudes_coming_soon {
+    .content #blurrable_section #les_dudes_coming_soon {
         position: absolute;
         height: auto;
         width: 30%;
@@ -371,23 +382,23 @@ body {
         bottom: 20%;
         transition: filter 250ms linear;
     }
-    .content #les_dudes_coming_soon:hover {
+    .content #blurrable_section #les_dudes_coming_soon:hover {
         filter: brightness(75%);
         transition: filter 250ms linear;
     }
-    .content .consumer_social_media {
+    .content #blurrable_section .consumer_social_media {
         position: absolute;
         bottom: 13%;
         right: 3%;
     }
-    .content .consumer_social_media .consumer_social_media_icons {
+    .content #blurrable_section .consumer_social_media .consumer_social_media_icons {
         display: inline;
         color: white;
         font-size: 8vw;
         text-decoration: none;
         transition: 250ms linear;
     }
-    .content .consumer_social_media .consumer_social_media_icons:hover {
+    .content #blurrable_section .consumer_social_media .consumer_social_media_icons:hover {
         transition: 250ms linear;
         filter: brightness(50%);
     }
