--- a/careers.css
+++ b/careers.css
@@ -49,17 +49,28 @@ body {
     color: white;
     font-family: 'MuseoModerno';
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 2%;
     font-size: 5.5vw;
+    font-weight: bold;
 }
 .content .careers_details #careers_subtext {
+    margin-right: 2%;
+    color: white;
+    font-family: 'MuseoModerno';
+    position: absolute;
+    top: 40%;
+    left: 2%;
+    font-size: 2.5vw;
+}
+.content .careers_details #careers_subtitle {
     color: white;
     font-family: 'MuseoModerno';
     position: absolute;
     top: 90%;
     left: 2%;
     font-size: 3vw;
+    font-weight: bold;
 }
 .content .careers_details .scrollable_area .careers_career .careers_buttons {
     margin-left: 10%;
@@ -133,21 +144,49 @@ body {
     padding: 4%;
     margin-bottom: 4%;
 }
-.content .careers_details .scrollable_area .careers_why #careers_why_title {
+.content .careers_details .scrollable_area .careers_contact_us {
+    text-align: center;
+}
+.content .careers_details .scrollable_area .careers_contact_us #careers_contact_us_title {
     margin-top: 4%;
+    margin-left: 2%;
+    margin-right: 2%;
     color: white;
     font-family: 'MuseoModerno';
     font-size: 5.5vw;
     text-align: center;
+    font-weight: bold;
 }
-.content .careers_details .scrollable_area .careers_why #careers_why_text {
-    font-size: 2vw;
-    font-family: 'Fira Sans';
-    color: white;
+.content .careers_details .scrollable_area .careers_contact_us #careers_contact_us_subtext {
     margin-left: 2%;
     margin-right: 2%;
-    padding-bottom: 200%;
+    color: white;
+    font-family: 'MuseoModerno';
+    font-size: 3vw;
     text-align: center;
+}
+.content .careers_details .scrollable_area .careers_contact_us #contact_us_button {
+    margin-bottom: 20%;
+    transition: 250ms linear;
+    border-color: black;
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 3vw;
+    outline: 0 solid transparent;
+    padding: 1%;
+    word-break: break-word;
+    border-style: solid;
+    font-family:'Fira Sans';
+    text-decoration: none;
+    filter: drop-shadow(0 5px);
+}
+.content .careers_details .scrollable_area .careers_contact_us #contact_us_button:hover {
+    transition: 250ms linear;
+    transform: translate(0px, 5px);
+    filter: drop-shadow(0 0);
 }
 @media only screen and (max-device-width: 1024px) {
     .content #background_video {
@@ -187,7 +226,7 @@ body {
         color: white;
         font-family: 'MuseoModerno';
         position: absolute;
-        top: 30%;
+        top: 20%;
         left: 2%;
         font-size: 10vw;
     }
@@ -195,7 +234,15 @@ body {
         color: white;
         font-family: 'MuseoModerno';
         position: absolute;
-        top: 70%;
+        top: 40%;
+        left: 2%;
+        font-size: 5vw;
+    }
+    .content .careers_details #careers_subtitle {
+        color: white;
+        font-family: 'MuseoModerno';
+        position: absolute;
+        top: 80%;
         left: 2%;
         font-size: 8vw;
     }
@@ -278,20 +325,7 @@ body {
         padding: 4%;
         margin-bottom: 4%;
     }
-    .content .careers_details .scrollable_area .careers_why #careers_why_title {
-        margin-top: 8%;
-        color: white;
-        font-family: 'MuseoModerno';
-        font-size: 10vw;
-        text-align: center;
-    }
-    .content .careers_details .scrollable_area .careers_why #careers_why_text {
-        font-size: 4vw;
-        font-family: 'Fira Sans';
-        color: white;
-        margin-left: 2%;
-        margin-right: 2%;
-        padding-bottom: 200%;
-        text-align: center;
+    .content .careers_details .scrollable_area .careers_contact_us {
+        
     }
 }
