--- a/menu.css
+++ b/menu.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
+.menu_button_blur {
+    filter: blur(7px);
+    pointer-events: none;
+}
 .menu_button {
     position: absolute;
     z-index: 3;
@@ -14,10 +18,6 @@
     margin: 0 0 5px 0;
     background: white;
     transition: all 0.5s ease-out;
-}
-.menu_button_blur {
-    filter: blur(7px);
-    pointer-events: none;
 }
 .menu_button.close {
     transform: rotate(180deg);
@@ -46,7 +46,7 @@
     transition: all 0.5s ease-in;
     background-color: black;
 }
-.menu ul {
+.menu .menu_list {
     position: absolute;
     top: 6%;
     left: -30%;
@@ -55,14 +55,14 @@
     padding: 0;
     overflow: hidden;
 }
-.menu.open ul {
+.menu.open .menu_list {
     transition: all 1.5s ease-in;
     transform: translate(40vw, 0);
 }
-.menu li {
+.menu .menu_list li {
     float: left;
 }
-.menu li a {
+.menu .menu_list li a {
     display: block;
     color: white;
     padding-top: 3%;
@@ -72,11 +72,15 @@
     font-family: 'Quicksand', sans-serif;
     transition: 250ms linear;
 }
-.menu li a:hover {
+.menu .menu_list li a:hover {
     filter: brightness(50%);
     transition: 250ms linear;
 }
 @media only screen and (max-device-width: 1024px) {
+    .menu_button_blur {
+        filter: blur(7px);
+        pointer-events: none;
+    }
     .menu_button {
         position: absolute;
         z-index: 3;
@@ -91,10 +95,6 @@
         margin: 0 0 5px 0;
         background: white;
         transition: all 0.5s ease-out;
-    }
-    .menu_button_blur {
-        filter: blur(7px);
-        pointer-events: none;
     }
     .menu_button.close {
         transform: rotate(180deg);
@@ -123,7 +123,7 @@
         transition: all 0.5s ease-in;
         background-color: black;
     }
-    .menu ul {
+    .menu .menu_list {
         position: absolute;
         left: -70%;
         list-style-type: none;
@@ -131,14 +131,14 @@
         padding: 0;
         overflow: hidden;
     }
-    .menu.open ul {
+    .menu.open .menu_list {
         transition: all 1.5s ease-in;
         transform: translate(90vw, 0);
     }
-    .menu li {
+    .menu .menu_list li {
         float: left;
     }
-    .menu li a {
+    .menu .menu_list li a {
         display: block;
         color: white;
         padding-top: 3%;
@@ -148,7 +148,7 @@
         font-family: 'Quicksand', sans-serif;
         transition: 250ms linear;
     }
-    .menu li a:hover {
+    .menu .menu_list li a:hover {
         filter: brightness(50%);
         transition: 250ms linear;
     }
